[project]
name = "ielove"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kenhezax", email = "168539462+kenhezax@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "lxml>=5.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ielove"]
